# AgroCode-hackathon-2024

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/models/: forell.pkl  lossos.pkl
backend/src/api/: main.py
backend/src/api/excel/: router.py
backend/src/api/fishes/: router.py
backend/src/api/generations/: router.py
backend/src/api/groups/: router.py
backend/src/config/: backend.py  mongo.py
backend/src/database/mongo/: connection.py  model.py
backend/src/domain/abc/: dao.py  dto.py
backend/src/domain/excel/: dal.py  dto.py
backend/src/domain/fish/: dal.py  dto.py  exception.py  model.py  service.py
backend/src/domain/generation/: dto.py  service.py
backend/src/domain/group/: dal.py  dto.py  exception.py  model.py  service.py
backend/src/utils/: docs_utils.py  routers_utils.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/components/Form/: Form.tsx  FormList.tsx  types.ts
frontend/src/components/FormGroup/: FormGroup.tsx  index.ts
frontend/src/components/Table/: Table.tsx
frontend/src/features/download/: index.tsx
frontend/src/features/form/: reducer.ts
frontend/src/features/graph/: reducer.ts
frontend/src/features/table/: reducer.ts
frontend/src/features/tree/: index.css  index.tsx
frontend/src/features/uploader/: index.tsx
frontend/src/layouts/: mainLayout.tsx
frontend/src/store/: index.ts
frontend/src/types/: types.ts
(+19 files in other folders)
