[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bad Delo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
beanie = "^1.27.0"
python-multipart = "^0.0.17"
openpyxl = "^3.1.5"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
